--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jodit-react": "^1.0.88",
+    "lodash": "^4.17.21",
     "multiselect-react-dropdown": "^1.6.13",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -22,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.4",
+    "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
