--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "jodit-react": "^1.0.88",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "multiselect-react-dropdown": "^1.6.13",
     "react": "^17.0.2",
