--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "voiash_app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.14.5",
+    "node": "12.18.2"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
